fix: adjust media query for improved text alignment on smaller screens

--- a/views/home.css
+++ b/views/home.css
@@ -22,6 +22,14 @@
     height: 19px;
 }
 
+@media (max-width: 768px) {
+    #data-container .row div {
+        text-align: center;
+    }
+    .hidden-text::before {
+        position: static;
+    }
+}
 .row-group:hover, .row-field:hover {
     background-color: var(--secondary-active-color);
     cursor: pointer;
